# Rust-Tray

./: .gitignore  Cargo.toml  README.md  build.rs  demo.bat  test_script.bat
assets/: Tray.exe.manifest  about.txt  resource.rc
src/: main.rs
