[package]
name = "Tray"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "Tray"
path = "src/main.rs"

[dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_Console",
    "Win32_UI_Shell",
    "Win32_UI_HiDpi",
    "Win32_System_Threading",
    "Win32_UI_Controls",
] }

[build-dependencies]
embed-resource = "1.4"

[profile.release]
opt-level = "z"   # 极致体积优化
lto = true        # 链接时优化
strip = true      # 移除符号表
codegen-units = 1 # 提高优化质量
panic = "abort"   # 移除回溯逻辑，进一步减小体积
